fix: the article with his image and the button with his title on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,25 @@ a {
     margin-top: 30px;
   }
 
+  .articles-image {
+    width: 80%;
+    height: 200px;
+  }
+
+  .articles-text {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    height: 300px;
+    background: var(--white);
+    padding: 0px 5px 0 50px;
+  }
+
+  .flex {
+    margin: 100px 50px;
+  }
+
   .grid {
     max-width: 500px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
